--- a/task7/icepro/sass/main.scss
+++ b/task7/icepro/sass/main.scss
@@ -1,12 +1,4 @@
+@import "var";
 @import "color/default";
 @import "sprite";
-* {
-	margin: 0rem;
-	padding: 0rem;
-}
-
-html {
-	font-size: 100%;
-	/*16 ÷ 16 × 100% = 100%*/
-}
-
+@import "base";
