完成一直到查找新世界
花费2小时

--- a/task7/icepro/sass/base.scss
+++ b/task7/icepro/sass/base.scss
@@ -1,21 +1,37 @@
+
 * {
 	margin: 0rem;
 	padding: 0rem;
 }
 
 html {
-	font-size: $base ÷ 16 × 100%;
+	font-size: ($base/16*100%);
 	/*16 ÷ 16 × 100% = 100%*/
+	font-family: "MicrosoftYaHei";
 }
 body {
-	min-width: 1280px;
+	min-width: $width * 1px;
+	width: 100%;
+	color: $font-grey;
 }
 
-div {
+div ,section,header,article,h1,h2,h3,h4,h5,h6,p{
 	position: relative;
 }
-
+//默认的p样式
 p {
-	font-size: (12/$base) rem;
-	font-family: "微软雅黑"
+	font-size: rem(12);
+	font-family: "MicrosoftYaHei";
+}
+
+//默认的隐藏样式
+.hidden {
+	display: none;
+}
+
+@mixin transition($param){
+	transition: $param;
+	-moz-transition: $param; /* Firefox 4 */
+	-webkit-transition: $param; /* Safari 和 Chrome */
+	-o-transition: $param; /* Opera */
 }
