--- a/task7/icepro/css/main.css
+++ b/task7/icepro/css/main.css
@@ -225,3 +225,55 @@ nav {
   height: 3.9375rem;
   font-size: 1.875rem;
   padding: 0.875rem 6.25rem; }
+
+.find-city [class^="select"] {
+  width: 14.8125rem;
+  height: 2.25rem; }
+  .find-city [class^="select"] .sel-display {
+    width: 14.6875rem;
+    height: 2.125rem;
+    position: absolute;
+    z-index: 10; }
+    .find-city [class^="select"] .sel-display:hover {
+      border: #e74f4d solid 0.0625rem; }
+  .find-city [class^="select"] .sel-content {
+    display: none;
+    position: absolute;
+    background: #fff; }
+  .find-city [class^="select"] .list {
+    position: absolute;
+    top: -0.0625rem;
+    padding-top: 2.25rem; }
+    .find-city [class^="select"] .list li {
+      height: 0rem;
+      background: #fff;
+      width: 14.6875rem; }
+      .find-city [class^="select"] .list li label {
+        width: 100%;
+        height: 100%;
+        display: none; }
+        .find-city [class^="select"] .list li label:active {
+          display: block;
+          height: 2.125rem; }
+      .find-city [class^="select"] .list li:hover {
+        background: #e74f4d; }
+        .find-city [class^="select"] .list li:hover label {
+          color: #fff; }
+    .find-city [class^="select"] .list:hover {
+      border: #e74f4d solid 0.0625rem; }
+      .find-city [class^="select"] .list:hover li {
+        height: 2.125rem; }
+      .find-city [class^="select"] .list:hover label {
+        display: block; }
+  .find-city [class^="select"] [id^="sel"]:checked ~ [id^="sel-content"] {
+    display: block !important;
+    position: absolute;
+    top: 0rem;
+    left: 0rem;
+    width: 14.6875rem;
+    height: 2.125rem;
+    z-index: 11; }
+  .find-city [class^="select"] input[type="radio"] {
+    position: absolute;
+    top: -9999px;
+    left: -9999px; }
