--- a/task7/icepro/sass/main.scss
+++ b/task7/icepro/sass/main.scss
@@ -120,3 +120,75 @@ nav {
 	font-size: rem(30);
 	padding: rem(14) rem(100);
 }
+
+.find-city {
+	[class^="select"] {
+		width: rem(237);
+		height: rem(36);
+		.sel-display {
+			width: rem(235);
+			height: rem(34);
+			position:absolute;
+			z-index: 10;
+			&:hover {
+				border: $red solid rem(1);
+			}
+		}
+		.sel-content {
+			display: none;
+			position: absolute;
+			background: $white;
+		}
+		.list {
+			position: absolute;
+			top:rem(-1);
+			padding-top: rem(36);
+			li {
+				height: 0rem;
+				background: $white;
+				width: rem(237-2);
+				
+				label {
+					width: 100%;
+					height: 100%;
+					display: none;
+					&:active {
+						display: block;
+						height: rem(36-2);
+
+					}
+				}
+				&:hover {
+					background: $red;
+					label {
+						color: $white;
+					}
+				}
+			}
+			&:hover {
+				border: $red solid rem(1);
+				li{
+					height: rem(36-2);
+				}
+				label {
+					display: block;
+				}
+			}
+
+		}
+		[id^="sel"]:checked ~ [id^="sel-content"] {
+			display: block !important;
+			position:absolute;
+			top: 0rem;
+			left: 0rem;
+			width: rem(235);
+			height: rem(34);
+			z-index: 11;
+		}
+		input[type="radio"] {
+		  position: absolute;
+		  top: -9999px;
+		  left: -9999px;
+		}
+	}
+}
