--- a/task7/icepro/css/main.css
+++ b/task7/icepro/css/main.css
@@ -42,9 +42,9 @@
 .font-dropdown {
   background: url(img/ioc.png);
   background-repeat: no-repeat;
-  background-position: -232px -9px;
-  width: 10px;
-  height: 6px;
+  background-position: -228.5px -3.5px;
+  width: 17px;
+  height: 17px;
   display: inline-block; }
 
 .font-book {
@@ -226,54 +226,87 @@ nav {
   font-size: 1.875rem;
   padding: 0.875rem 6.25rem; }
 
-.find-city [class^="select"] {
-  width: 14.8125rem;
-  height: 2.25rem; }
-  .find-city [class^="select"] .sel-display {
-    width: 14.6875rem;
-    height: 2.125rem;
+.find-city {
+  z-index: 1;
+  height: 21.25rem;
+  background: url(../img/cover2.png) no-repeat center;
+  background-size: cover;
+  color: #fff; }
+  .find-city header h2 {
+    padding-top: 3.375rem;
+    text-align: center;
+    font-size: 21px;
+    color: white;
+    line-height: 1.994; }
+  .find-city header h3 {
+    text-align: center;
+    margin-bottom: 3.125rem; }
+  .find-city .search li {
+    float: left;
+    list-style: none;
+    width: 25%; }
+  .find-city .font-dropdown {
+    z-index: 15;
     position: absolute;
-    z-index: 10; }
-    .find-city [class^="select"] .sel-display:hover {
-      border: #e74f4d solid 0.0625rem; }
-  .find-city [class^="select"] .sel-content {
-    display: none;
-    position: absolute;
-    background: #fff; }
-  .find-city [class^="select"] .list {
-    position: absolute;
-    top: -0.0625rem;
-    padding-top: 2.25rem; }
-    .find-city [class^="select"] .list li {
-      height: 0rem;
-      background: #fff;
-      width: 14.6875rem; }
-      .find-city [class^="select"] .list li label {
-        width: 100%;
-        height: 100%;
-        display: none; }
-        .find-city [class^="select"] .list li label:active {
-          display: block;
+    right: 1.25rem;
+    top: 50%;
+    background-color: #e74f4d;
+    margin-top: -9.5px; }
+  .find-city [class^="select"] {
+    position: relative;
+    color: #979898;
+    width: 14.8125rem;
+    height: 2.25rem; }
+    .find-city [class^="select"] .sel-content {
+      display: none;
+      position: absolute;
+      background: #fff; }
+      .find-city [class^="select"] .sel-content p {
+        line-height: 2.125rem;
+        text-indent: 1em; }
+    .find-city [class^="select"] .list {
+      position: absolute;
+      top: -0.0625rem;
+      padding-top: 2.25rem; }
+      .find-city [class^="select"] .list li {
+        height: 0rem;
+        background: #fff;
+        width: 14.6875rem; }
+        .find-city [class^="select"] .list li label {
+          width: 100%;
+          line-height: 2.25rem;
+          text-indent: 1.5em;
+          display: none; }
+          .find-city [class^="select"] .list li label:active {
+            display: block;
+            height: 2.125rem; }
+        .find-city [class^="select"] .list li:hover {
+          background: #e74f4d; }
+          .find-city [class^="select"] .list li:hover label {
+            color: #fff;
+            border-bottom: solid #e74f4d 2px; }
+      .find-city [class^="select"] .list:hover {
+        border: #e74f4d solid 0.0625rem;
+        margin-top: -0.0625rem; }
+        .find-city [class^="select"] .list:hover li {
           height: 2.125rem; }
-      .find-city [class^="select"] .list li:hover {
-        background: #e74f4d; }
-        .find-city [class^="select"] .list li:hover label {
-          color: #fff; }
-    .find-city [class^="select"] .list:hover {
-      border: #e74f4d solid 0.0625rem; }
-      .find-city [class^="select"] .list:hover li {
-        height: 2.125rem; }
-      .find-city [class^="select"] .list:hover label {
-        display: block; }
-  .find-city [class^="select"] [id^="sel"]:checked ~ [id^="sel-content"] {
-    display: block !important;
-    position: absolute;
-    top: 0rem;
-    left: 0rem;
-    width: 14.6875rem;
-    height: 2.125rem;
-    z-index: 11; }
-  .find-city [class^="select"] input[type="radio"] {
-    position: absolute;
-    top: -9999px;
-    left: -9999px; }
+        .find-city [class^="select"] .list:hover label {
+          display: block; }
+    .find-city [class^="select"] [id^="sel"]:checked ~ label:before {
+      content: "√";
+      position: absolute;
+      left: -1em;
+      margin-top: 0em;
+      z-index: 12; }
+    .find-city [class^="select"] [id^="sel"]:checked ~ [id^="sel-content"] {
+      display: block !important;
+      position: absolute;
+      top: 0rem;
+      left: 0rem;
+      width: 14.6875rem;
+      height: 2.125rem;
+      z-index: 11; }
+    .find-city [class^="select"] input[type="radio"] {
+      position: absolute;
+      top: -9999px;
+      left: -9999px; }
