--- a/task7/ricosmall/css/comm.css
+++ b/task7/ricosmall/css/comm.css
@@ -5,9 +5,9 @@
 body{
     width: 1280px;
     background: #ccc;/* TODO:  */
-    /*position: absolute;
+    position: absolute;
     left: 50%;
-    margin-left: -640px;*/
+    margin-left: -640px;
 }
 /* TODO: 顶部样式 */
 .header{
