--- a/task7/icepro/css/main.css
+++ b/task7/icepro/css/main.css
@@ -133,7 +133,8 @@ nav {
   width: 100%;
   position: fixed;
   background-color: #fff;
-  z-index: 990; }
+  z-index: 990;
+  min-width: 1280; }
   nav ul > li {
     font-size: 0.875rem;
     margin-right: 4.375rem;
@@ -236,6 +237,13 @@ nav {
   line-height: 0.875rem;
   padding: 0.625rem 5.6875rem; }
 
+.btn-small {
+  background-color: #fff;
+  border: 1px #e74f4d solid;
+  width: 6.5625rem;
+  height: 1.9375rem;
+  color: #e74f4d; }
+
 .find-city {
   z-index: 1;
   height: 21.25rem;
@@ -291,6 +299,8 @@ nav {
           .find-city [class^="select"] .list li:hover label {
             color: #fff; }
       .find-city [class^="select"] .list:hover {
+        margin-top: -0.0625rem;
+        margin-left: -0.0625rem;
         border: #e74f4d solid 0.0625rem; }
         .find-city [class^="select"] .list:hover li {
           height: 2.125rem; }
@@ -312,7 +322,6 @@ nav {
       z-index: 11; }
     .find-city [class^="select"] input[type="radio"] {
       position: absolute;
-      top: -9999px;
       left: -9999px; }
 
 .display {
@@ -330,9 +339,222 @@ nav {
       width: 12.6875rem;
       height: 19.4375rem; }
     .display figure p {
-      text-align: center;
-      color: #979898; }
+      text-align: center; }
     .display figure h3 {
+      padding-top: 0.5rem;
       font-size: 0.875rem;
       color: #323333;
       text-align: center; }
+    .display figure h4 {
+      font-size: 0.75rem;
+      text-align: center;
+      color: #979898;
+      padding: 0.5rem 0rem; }
+
+.switch－new {
+  height: 35.4375rem;
+  width: 100%; }
+  .switch－new ul {
+    top: 27rem;
+    right: 13.125%;
+    position: absolute;
+    z-index: 10; }
+    .switch－new ul li {
+      padding: 0.625rem;
+      list-style: none;
+      float: left; }
+      .switch－new ul li label {
+        display: block;
+        width: 0.625rem;
+        height: 0.625rem;
+        background: #d2d2d2;
+        -moz-border-radius: 0.3125rem;
+        -webkit-border-radius: 0.3125rem;
+        border-radius: 0.3125rem; }
+  .switch－new .tab {
+    overflow: hidden;
+    background: #fff;
+    height: 35.4375rem;
+    width: 100%;
+    position: absolute;
+    left: 0rem;
+    right: 0rem;
+    transition: opacity 2s ease;
+    -moz-transition: opacity 2s ease;
+    /* Firefox 4 */
+    -webkit-transition: opacity 2s ease;
+    /* Safari 和 Chrome */
+    -o-transition: opacity 2s ease;
+    /* Opera */ }
+  .switch－new input[type="radio"] {
+    position: absolute;
+    left: -9999px; }
+  .switch－new .left-content {
+    float: left;
+    width: 66.40625%;
+    height: 35.4375rem;
+    color: #fff;
+    text-align: center; }
+    .switch－new .left-content h3 {
+      margin-top: 8.125rem;
+      opacity: 0.5;
+      font-size: 3.09206rem; }
+    .switch－new .left-content h1 {
+      margin-top: 0.625rem;
+      font-size: 9.86175rem; }
+    .switch－new .left-content p {
+      margin-bottom: 1.5625rem;
+      font-size: 1.36938rem; }
+  .switch－new .right-content {
+    float: right;
+    height: 35.4375rem;
+    width: 33.59375%; }
+    .switch－new .right-content h4 {
+      margin-top: 10.375rem;
+      margin-bottom: 1.875rem;
+      text-align: center;
+      font-size: 1.125rem; }
+      .switch－new .right-content h4 strong {
+        color: #e74f4d; }
+    .switch－new .right-content p {
+      font-family: "SimSun";
+      line-height: 2.5;
+      width: 18rem;
+      line-height: 1.875rem;
+      margin-right: auto;
+      margin-left: auto;
+      margin-bottom: 1.125rem; }
+    .switch－new .right-content .center {
+      text-align: center; }
+  .switch－new .cover-4-1 {
+    background: url(../img/cover4.png) no-repeat;
+    background-size: cover;
+    opacity: 0.2; }
+  .switch－new .cover-4-2 {
+    background: url(../img/cover4.png) no-repeat;
+    background-size: cover;
+    opacity: 0.7; }
+  .switch－new .cover-4-3 {
+    background: url(../img/cover4.png) no-repeat;
+    background-size: cover;
+    opacity: 1; }
+  .switch－new .tab-content {
+    display: none;
+    height: 100%;
+    opacity: 0; }
+  .switch－new [id^="tab"]:checked ~ [id^="tab-content"] {
+    display: block !important;
+    z-index: 2;
+    opacity: 1; }
+
+.read-more {
+  overflow: hidden;
+  font-family: "SimHei"; }
+  .read-more > div {
+    float: left; }
+  .read-more .new-love-photo {
+    width: 33.34%;
+    overflow: hidden; }
+  .read-more .new-love-red {
+    height: 32.5625rem;
+    width: 33.33%;
+    background-color: #e7504d;
+    color: #fff; }
+    .read-more .new-love-red h2 {
+      padding-top: 10.8125rem;
+      font-size: 21px;
+      line-height: 1.446;
+      text-align: center; }
+    .read-more .new-love-red h3 {
+      text-align: center; }
+    .read-more .new-love-red button {
+      display: block;
+      margin-top: 0.9375rem;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: #e7504d;
+      border: 1px #fff solid;
+      width: 7.25rem;
+      height: 2.5625rem;
+      color: #fff;
+      font-size: 1.3125rem;
+      font-family: "SimHei";
+      line-height: 2.5625rem; }
+  .read-more .new-love-white {
+    height: 32.5625rem;
+    width: 33.33%;
+    background-color: #fff;
+    color: #e7504d; }
+    .read-more .new-love-white h2 {
+      padding-top: 10.8125rem;
+      font-size: 21px;
+      line-height: 1.446;
+      text-align: center; }
+    .read-more .new-love-white h3 {
+      text-align: center; }
+    .read-more .new-love-white button {
+      display: block;
+      margin-top: 0.9375rem;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: #fff;
+      border: 1px #e74f4d solid;
+      width: 7.25rem;
+      height: 2.5625rem;
+      color: #e74f4d;
+      font-size: 1.3125rem;
+      font-family: "SimHei";
+      line-height: 2.5625rem; }
+
+.join-us h2 {
+  margin-top: 7.375rem;
+  color: black;
+  text-align: center;
+  font-size: 1.3125rem; }
+
+.join-us h3 {
+  color: #e74f4d;
+  text-align: center;
+  margin-bottom: 0.9375rem; }
+
+.join-us > p {
+  width: 26.25rem;
+  margin: auto;
+  text-align: center; }
+
+.join-us .provision {
+  width: 78.125%;
+  height: 18.6875rem;
+  padding: 5.625rem 8.75rem 9.375rem 8.75rem; }
+  .join-us .provision > div {
+    float: left; }
+  .join-us .provision .more {
+    width: 50%; }
+  .join-us .provision .forms {
+    width: 50%; }
+    .join-us .provision .forms span {
+      background-color: #e3e3e4;
+      line-height: 2.375rem; }
+    .join-us .provision .forms input {
+      height: 2.375rem;
+      width: 15.9375rem;
+      margin-right: 0.9375rem;
+      margin-bottom: 0.9375rem;
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      -o-appearance: none;
+      border: none;
+      background-color: #e3e3e4; }
+    .join-us .provision .forms textarea {
+      height: 7.5rem;
+      width: 38.75rem;
+      margin-right: 0.9375rem;
+      margin-bottom: 0.9375rem;
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      -o-appearance: none;
+      border: none;
+      background-color: #e3e3e4;
+      resize: none; }
