完成结构设计，后面去除padding和标示颜色

--- a/task7/icepro/css/main.css
+++ b/task7/icepro/css/main.css
@@ -539,6 +539,8 @@ nav {
       margin-bottom: 15px;
       margin-right: 20px;
       float: left; }
+    .join-us .provision .forms .col-span1 {
+      float: left; }
     .join-us .provision .forms input {
       height: 2.375rem;
       width: 15.9375rem;
