--- a/task9/src/css/aside.scss
+++ b/task9/src/css/aside.scss
@@ -1,26 +1,61 @@
 // .aside {
+.active {
+	& > .font-file {
+		@include font-ioc(8px,7px,10px,11px,true);
+	}
+	& > .font-folder {
+		@include font-ioc(82px,56px,12px,12px,true);
+	}
+}
+.font-file {
+	@include font-ioc(33px,7px,10px,11px);
+}
+.font-book {
+	@include font-ioc(57px,7px,11px,12px);
+}
+.font-folder {
+	
+	@include font-ioc(57px,31px,12px,12px);
+}
+.font-star {
+	
+	@include font-ioc(31px,32px,12px,12px);
+}
+.font-outer {
+	
+	@include font-ioc(7px,31px,12px,12px);
+}
+.font-table {
+	
+	@include font-ioc(81px,81px,12px,12px);
+}
 .name {
 	margin: auto;
-	width: rem(112);
+	width: rem(112+57);
 	color: white;
 	.font-round {
-		width: rem(46);
-		height: rem(46);
-		border-radius: 50%;
-		background-color: #b9babe;
+		@include font-ioc(9px,59px,57px,57px);
+		// line-height: rem(57);
+		// width: rem(57);
+		// height: rem(46);
+		// border-radius: 50%;
+		// background-color: #b9babe;
 		position: absolute;
+		// display: inline-block;
 	}
 	p {
-		height: rem(46);
+		vertical-align: middle;
+		// height: rem(57);
 		margin: rem(24);
-		line-height: rem(46);
+		padding-top: rem(6);
+		line-height: rem(57);
 		padding-left: rem(46);
 	}
 
 }
 .collection {
-	width: rem(112);
-	margin: auto;
+	width: rem(112+57);
+	margin-left: rem(63-112/2);
 	overflow: hidden;
 	.right {
 		float: right;
@@ -43,7 +78,6 @@
 	}
 	li {
 		list-style: none;
-
 	}
 	.title {
 		padding-top: rem(15);
@@ -57,9 +91,24 @@
 		& > p, li{
 			padding-left: rem(45);
 			margin-top: rem(18);
+			& > span {
+				margin-right: rem(3);
+			}
 		}
-		.list-folder.active {
-			color: white;
+		.list-folder {
+			&.active{
+				color: white;
+				&:before {
+					@include font-ioc(82px,31px,12px,9px,true);
+				}
+			}
+			&:before {
+				@include font-ioc(82px,7px,12px,12px);
+				content: "";
+				position: absolute;
+				margin-left: rem(-15);
+				display: block;
+			}
 		}
 		.list-file {
 			padding-left: rem(45+30);
@@ -69,5 +118,4 @@
 		}
 	}
 }
-.asda {
 // }
