--- a/task9/src/css/constructure.scss
+++ b/task9/src/css/constructure.scss
@@ -40,6 +40,7 @@ nav {
 		background-color: #2a2e3d;
 		color: #6e8095;
 		width: per(260);
+		// min-width: rem(260);
 		border-box: inside;
 		float: left;
 	}
