--- a/css/comm.css
+++ b/css/comm.css
@@ -38,15 +38,15 @@ a:hover{
     border-bottom: 1px solid #e8e8e8;
     color: #036;
     text-align: center;
-    line-height: 100px;
 }
 .header h1{
+    line-height: 100px;
     margin: 0.325rem !important;
     padding: 0px;
 }
 .header p{
     margin: 0px !important;
-    padding: 0px;
+    padding: 5px 0;
 }
 
 /**
@@ -58,7 +58,6 @@ a:hover{
     overflow: hidden;
     padding: 20px;
 }
-
 /**
  *footer的样式
  */
